--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,5 +51,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
+    implementation 'androidx.preference:preference-ktx:1.2.0'
 
 }
