--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     implementation 'androidx.preference:preference-ktx:1.2.0'
-
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
+    implementation 'android.arch.lifecycle:compiler:1.1.1'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 }
