--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,7 @@ dependencies {
 
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     implementation 'android.arch.persistence.room:compiler:1.1.1'
+    implementation 'android.arch.persistence.room:common:1.1.1'
+    implementation 'androidx.room:room-ktx:2.4.3'
     androidTestImplementation 'android.arch.persistence.room:testing:1.1.1'
 }
