--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -45,6 +47,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.preference:preference:1.2.0'
+    implementation 'com.google.dagger.hilt.android:com.google.dagger.hilt.android.gradle.plugin:2.44'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -60,9 +63,13 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-reflect:1.6.10'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.10'
 
-    implementation 'android.arch.persistence.room:runtime:1.1.1'
-    implementation 'android.arch.persistence.room:compiler:1.1.1'
-    implementation 'android.arch.persistence.room:common:1.1.1'
-    implementation 'androidx.room:room-ktx:2.4.3'
-    androidTestImplementation 'android.arch.persistence.room:testing:1.1.1'
+    implementation 'androidx.room:room-migration:2.4.3'
+    implementation 'androidx.room:room-rxjava2:2.4.3'
+    implementation 'androidx.room:room-runtime:2.4.3'
+    implementation 'androidx.room:room-common:2.4.3'
+    kapt 'androidx.room:room-compiler:2.4.3'
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-android-compiler:2.44"
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+
 }
