--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,9 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.4.3'
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-android-compiler:2.44"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 
 }
