--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
-    id 'com.google.dagger.hilt.android'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -35,6 +35,8 @@ android {
         jvmTarget = '1.8'
     }
 
+
+
     viewBinding{
         enabled = true
     }
@@ -47,7 +49,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.preference:preference:1.2.0'
-    implementation 'com.google.dagger.hilt.android:com.google.dagger.hilt.android.gradle.plugin:2.44'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -56,23 +57,22 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
     implementation 'androidx.preference:preference-ktx:1.2.0'
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
-    implementation 'android.arch.lifecycle:compiler:1.1.1'
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-
-    implementation 'org.jetbrains.kotlin:kotlin-ksp:1.4.0-rc-dev-experimental-20200828'
-    implementation 'org.jetbrains.kotlin:kotlin-reflect:1.6.10'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.6.10'
 
     implementation 'androidx.room:room-migration:2.4.3'
-    implementation 'androidx.room:room-rxjava2:2.4.3'
-    implementation 'androidx.room:room-runtime:2.4.3'
-    implementation 'androidx.room:room-common:2.4.3'
     kapt 'androidx.room:room-compiler:2.4.3'
+    implementation 'androidx.room:room-ktx:2.4.3'
+
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-android-compiler:2.44"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    //implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
 
-    implementation 'androidx.work:work-runtime-ktx:2.7.1'
+    //compose dependencies
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation 'androidx.navigation:navigation-compose:2.5.2'
 
+    
 }
