--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,9 +3,13 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs'
+    id 'kotlin-parcelize'
 }
 
+
 android {
+
     namespace 'com.example.mfpa'
     compileSdk 32
 
@@ -40,6 +44,7 @@ android {
     viewBinding{
         enabled = true
     }
+
 }
 
 dependencies {
@@ -52,9 +57,11 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
+
     implementation 'androidx.preference:preference-ktx:1.2.0'
     implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
 
@@ -64,15 +71,13 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-android-compiler:2.44"
-    //implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
+
+    //lifecycle
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
-    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'android.arch.lifecycle:common:1.1.1'
 
-    //compose dependencies
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
-    implementation 'androidx.navigation:navigation-compose:2.5.2'
-
-    
+    implementation 'androidx.datastore:datastore-preferences:1.0.0'
 }
