--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,13 +71,13 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-android-compiler:2.44"
-    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
+    //implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03'
     kapt 'androidx.hilt:hilt-compiler:1.0.0'
 
     //lifecycle
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
-    implementation 'android.arch.lifecycle:common:1.1.1'
+    //implementation 'android.arch.lifecycle:common:1.1.1'
 
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
 }
