--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,5 +82,8 @@ dependencies {
     // retrofit dependencies
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
 }
